# sanpou

./: .gitignore  AGENTS.md  README.md  dune-project  mise.toml  sanpou.opam
.github/: dependabot.yml
.github/actions/setup-tlaplus/: action.yaml
.github/skills/git-create-branch/: SKILL.md
.github/skills/git-create-commit/: SKILL.md
.github/skills/github-create-pr/: SKILL.md
.github/workflows/: ci.yaml  drift.yaml
example/: barrier.json  barrier.snp  conditional_variable.json  conditional_variable.snp  factorial.json  factorial.snp  rwlock.cfg  rwlock.json  rwlock.snp  semaphore.cfg  semaphore.json  semaphore.snp
lib/: dune
lib/json/: json.ml
lib/sanpou/: alpha_convert.ml  alpha_convert.mli  ast.ml  ast_printer.ml  builtin.ml  canonicalize_locals.ml  canonicalize_locals.mli  check_process_domains.ml  check_process_domains.mli  check_scope.ml  check_scope.mli  check_steps.ml  check_steps.mli  check_temporal.ml  check_temporal.mli  codegen.ml  compile.ml  compile.mli  config.ml  cst.ml  cst_printer.ml  cst_to_ast.ml  dune  emit_tla.ml  emit_tla.mli  fuse.ml  fuse.mli  generic_ast.ml  ir.ml  lexer.mll  linearize.ml  linearize.mli  lower.ml  normalize_calls.ml  normalize_calls.mli  normalized_ast.ml  parser.mly  reserved_names.ml  reserved_names.mli  resolved_ast.ml  (+6 more)
lib/tla/: dune  tla_ast.ml  tla_printer.ml
test/: dune
test/cram/: compile.t  dune  errors.t  states.t  tlc.t  trace.t
test/sanpou/: dune  test_alpha_convert.ml  test_ast_printer.ml  test_check_process_domains.ml  test_check_scope.ml  test_check_steps.ml  test_check_temporal.ml  test_codegen.ml  test_compile.ml  test_config.ml  test_cst_printer.ml  test_e2e.ml  test_linearize.ml  test_normalize_calls.ml  test_parse.ml  test_projection.ml  test_trace.ml  test_typing.ml
