(library
 (name sanpou)
 (libraries tla str json)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(menhir
 (flags (--explain))
 ; Inference prints some nonterminal types qualified as Sanpou.Generic_ast.*,
 ; makes the generated parser depend on the library's own alias module —
 ; dune rejects that as circular. Every symbol is typed by hand in
 ; parser.mly instead.
 (infer false)
 (modules parser))

(ocamllex
 (modules lexer))
